--- a/Prediccion/templates/index.html
+++ b/Prediccion/templates/index.html
@@ -8,102 +8,175 @@
     <link rel="stylesheet" href="{% static 'css/estilos_index.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        .hero-content {
+            background-color: rgba(0, 0, 0, 0.66);
+            padding: 20px;
+            border-radius: 10px;
+        }
 
+        .left-align-container {
+            margin-left: 0;
+            margin-right: auto;
+        }
+
+        .card {
+            position: relative;
+            overflow: hidden;
+            height: 300px;
+            margin-bottom: 20px;
+        }
+
+        .card-body {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            opacity: 0;
+            transition: opacity 0.3s;
+            padding: 20px;
+        }
+
+        .card:hover .card-body {
+            opacity: 1;
+        }
+
+        .card::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-size: cover;
+            background-position: center;
+            transition: filter 0.3s;
+        }
+
+        .card:nth-child(1)::before {
+            background-image: url('{% static 'img/94.jpg' %}');
+        }
+
+        .card:nth-child(2)::before {
+            background-image: url('{% static 'img/image.png' %}');
+        }
+
+        .card:nth-child(3)::before {
+            background-image: url('{% static 'img/diagramaSerid.png' %}');
+        }
+
+        .card:nth-child(4)::before {
+            background-image: url('{% static 'img/vecteezyisometric-school-illustrationgr0522_generated.jpg' %}');
+        }
+
+        .card:hover::before {
+            filter: blur(5px);
+        }
+
+        .info-section h2, .info-section h3 {
+            margin-bottom: 20px;
+        }
+
+        .info-section p {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <!-- Logo y nombre -->
-        <a class="navbar-brand" href="#">
-          <img src="{% static 'img/logo.png' %}" alt="" width="30" height="30" class="d-inline-block align-top">
-          Predicción de Deserción Estudiantil
-        </a>
-
-        <!-- Botón colapsable para dispositivos móviles -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Elementos de la barra de navegación -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'signin' %}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'signup' %}">Register</a>
-            </li>
-          </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="{% static 'img/image.png' %}" alt="" width="30" height="30" class="d-inline-block align-top">
+                TrackGuard
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signin' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">Acerca de</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
-   <!-- Hero Section -->
-    <section class="hero bg-black text-white text-center py-5">
-      <div class="container">
-        <div class="text-start">
-          <h2 class="display-4">Predice la Deserción Estudiantil con Nuestra Aplicación</h2>
-          <p class="lead">Utiliza modelos matemáticos para identificar estudiantes en riesgo</p>
-          <a href="{% url 'home' %}" class="btn btn-success btn-lg">Empieza Gratis</a>
+    <!-- Hero Section -->
+    <section class="hero text-white text-center py-5" style="background-image: url('{% static 'img/HEADER1.jpg' %}'); background-size: cover;">
+        <div class="container left-align-container">
+            <div class="hero-content text-start">
+                <h2 class="display-4">TrackGuard</h2>
+                <p class="lead">Predicción y análisis de la deserción estudiantil en la carrera de Computación de la Universidad Nacional de Loja.</p>
+                <a href="{% url 'home' %}" class="btn btn-success btn-lg">Ver más</a>
+            </div>
         </div>
-        <div class="text-end">
-          <img src="{% static 'img/modelos-matematicos-curso.png' %}" alt="Imagen" class="img-fluid">
-        </div>
-      </div>
     </section>
 
-    <!-- Features Section -->
-    <section id="features" class="features py-5">
+    <!-- Info Section -->
+    <section class="info-section py-5">
         <div class="container">
-            <h3 class="text-center">Características Principales</h3>
+            <h2>Infórmate sobre tu carrera</h2>
+            <p>Los estudiantes de cuarto ciclo, en colaboración con la administración de la carrera de computación han dispuesto TrackGuard para el uso de los estudiantes, donde podrán realizar predicciones de deserción con datos históricos reales.</p>
             <div class="row">
-                <div class="col-md-4">
-                    <h4>Predicciones Precisas</h4>
-                    <p>Basadas en datos históricos para identificar estudiantes en riesgo.</p>
+                <div class="col-md-6">
+                    <p>La deserción estudiantil es un fenómeno preocupante que afecta tanto a las instituciones educativas como a los mismos estudiantes. Este problema se manifiesta cuando los alumnos abandonan sus estudios antes de completar su formación académica, representando en gran medida un problema grave para una institución o curso.</p>
                 </div>
-                <div class="col-md-4">
-                    <h4>Informes Detallados</h4>
-                    <p>Análisis y reportes para una mejor toma de decisiones.</p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Alertas Tempranas</h4>
-                    <p>Recibe alertas tempranas para intervenir a tiempo.</p>
+                <div class="col-md-6">
+                    <p>La alta tasa de deserción impacta negativamente el desarrollo profesional de los estudiantes, por lo que es fundamental que las universidades implementen estrategias de control para identificar la deserción en etapas tempranas y apliquen medidas de apoyo y acompañamiento para reducir esta problemática. ¡TrackGuard es una de ellas!</p>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- How It Works Section -->
-    <section id="how-it-works" class="how-it-works bg-light py-5">
-        <div class="container">
-            <h3 class="text-center">Cómo Funciona</h3>
+            <h3 class="mt-5">¿Qué puedes hacer en TrackGuard?</h3>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <h4>Paso 1</h4>
-                    <p>Importa tus datos</p>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Predicción de deserción con gráficas interactivas</h5>
+                            <p class="card-text">Realiza predicciones de deserción estudiantil con datos históricos reales de la carrera de Computación.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h4>Paso 2</h4>
-                    <p>Elige tu modelo de predicción</p>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Descargar los datos disponibles en nuestra base de datos</h5>
+                            <p class="card-text">Descarga los datos históricos de la carrera de Computación para realizar análisis personalizados.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h4>Paso 3</h4>
-                    <p>Genera informes y recibe alertas</p>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Realizar simulaciones con el modelo matemático SEIRD</h5>
+                            <p class="card-text">Realiza simulaciones de deserción estudiantil con el modelo matemático SEIRD.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Infórmate sobre la deserción en Computación</h5>
+                            <p class="card-text">Consulta información relevante sobre la deserción estudiantil en la carrera de Computación.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Testimonials Section -->
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
             <p>&copy; 2024 Aplicación para Predecir la Deserción Estudiantil.</p>
-            <p>
-
-            </p>
         </div>
     </footer>
 </body>
