--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -100,6 +100,12 @@
                             <span>Modelo matemático</span>
                         </a>
                     </li>
+                    <li class="sidebar-header">Predicciones</li>
+                    <li class="sidebar-item">
+                        <a href="{% url 'prediccion' %}" class="sidebar-link">
+                            <i class="lni lni-bar-chart"></i>
+                            <span>Predicciones</span>
+                        </a>
                 {% endif %}
             </ul>
             <!-- Sidebar Navigation Ends -->
