--- a/Prediccion/templates/prediccion.html
+++ b/Prediccion/templates/prediccion.html
@@ -3,25 +3,36 @@
 {% block title %} Predicciones de Datos Históricos {% endblock %}
 
 {% block extra_css %}
-    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        #downloadButton {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
     <h1 class="p-4">Predicciones de Datos Históricos</h1>
     <div id="main" style="width: 100%; height: 600px;"></div>
+    <button id="downloadButton" class="btn btn-dark mb-3">
+        <i class="fas fa-download"></i> Descargar Gráfica
+    </button>
 {% endblock %}
 
 {% block extra_js %}
+    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
     <script>
-        // Datos de ejemplo. Reemplaza con tus datos.
-        var fechas = {{ fechas|safe }};
+        var periodos = {{ periodos|safe }};
         var matriculados = {{ matriculados|safe }};
         var reprobados = {{ reprobados|safe }};
         var abandonaron = {{ abandonaron|safe }};
         var aprobados = {{ aprobados|safe }};
         var aplazadores = {{ aplazadores|safe }};
         var desertores = {{ desertores|safe }};
-        var fechas_futuras = {{ fechas_futuras|safe }};
+        var nuevos_periodos = {{ nuevos_periodos|safe }};
 
         var prediccion_matriculados = {{ prediccion_matriculados|safe }};
         var prediccion_reprobados = {{ prediccion_reprobados|safe }};
@@ -29,12 +40,6 @@
         var prediccion_aprobados = {{ prediccion_aprobados|safe }};
         var prediccion_aplazadores = {{ prediccion_aplazadores|safe }};
         var prediccion_desertores = {{ prediccion_desertores|safe }};
-
-        // Asegúrate de que los datos sean válidos y estén bien formateados
-        console.log("Fechas:", fechas);
-        console.log("Matriculados:", matriculados);
-        console.log("Predicciones Matriculados:", prediccion_matriculados);
-        console.log("Fechas Futuras:", fechas_futuras);
 
         var option = {
             title: {
@@ -47,11 +52,9 @@
                 data: ['Matriculados', 'Reprobados', 'Abandonaron', 'Aprobados', 'Aplazadores', 'Desertores']
             },
             xAxis: {
-                type: 'time',
-                name: 'Fecha',
-                data: fechas.concat(fechas_futuras).map(function(date) {
-                    return new Date(date);
-                })
+                type: 'category',
+                name: 'Periodo',
+                data: periodos.concat(nuevos_periodos)
             },
             yAxis: {
                 type: 'value',
@@ -61,73 +64,49 @@
                 {
                     name: 'Matriculados',
                     type: 'line',
-                    data: matriculados.map(function(val, idx) {
-                        return [new Date(fechas[idx]), val];
-                    }).concat(
-                        fechas_futuras.map(function(date, idx) {
-                            return [new Date(date), prediccion_matriculados[idx]]; // Ajusta si tienes múltiples predicciones
-                        })
-                    )
+                    data: matriculados.concat(prediccion_matriculados)
                 },
                 {
                     name: 'Reprobados',
                     type: 'line',
-                    data: reprobados.map(function(val, idx) {
-                        return [new Date(fechas[idx]), val];
-                    }).concat(
-                        fechas_futuras.map(function(date, idx) {
-                            return [new Date(date), prediccion_reprobados[idx]];
-                        })
-                    )
+                    data: reprobados.concat(prediccion_reprobados)
                 },
                 {
                     name: 'Abandonaron',
                     type: 'line',
-                    data: abandonaron.map(function(val, idx) {
-                        return [new Date(fechas[idx]), val];
-                    }).concat(
-                        fechas_futuras.map(function(date, idx) {
-                            return [new Date(date), prediccion_abandonaron[idx]];
-                        })
-                    )
+                    data: abandonaron.concat(prediccion_abandonaron)
                 },
                 {
                     name: 'Aprobados',
                     type: 'line',
-                    data: aprobados.map(function(val, idx) {
-                        return [new Date(fechas[idx]), val];
-                    }).concat(
-                        fechas_futuras.map(function(date, idx) {
-                            return [new Date(date), prediccion_aprobados[idx]];
-                        })
-                    )
+                    data: aprobados.concat(prediccion_aprobados)
                 },
                 {
                     name: 'Aplazadores',
                     type: 'line',
-                    data: aplazadores.map(function(val, idx) {
-                        return [new Date(fechas[idx]), val];
-                    }).concat(
-                        fechas_futuras.map(function(date, idx) {
-                            return [new Date(date), prediccion_aplazadores[idx]];
-                        })
-                    )
+                    data: aplazadores.concat(prediccion_aplazadores)
                 },
                 {
                     name: 'Desertores',
                     type: 'line',
-                    data: desertores.map(function(val, idx) {
-                        return [new Date(fechas[idx]), val];
-                    }).concat(
-                        fechas_futuras.map(function(date, idx) {
-                            return [new Date(date), prediccion_desertores[idx]];
-                        })
-                    )
+                    data: desertores.concat(prediccion_desertores)
                 }
             ]
         };
 
         var chart = echarts.init(document.getElementById('main'));
         chart.setOption(option);
+
+        document.getElementById('downloadButton').addEventListener('click', function () {
+            var url = chart.getDataURL({
+                type: 'png',
+                pixelRatio: 2,
+                backgroundColor: '#fff'
+            });
+            var link = document.createElement('a');
+            link.href = url;
+            link.download = 'predicciones_datos_historicos.png';
+            link.click();
+        });
     </script>
 {% endblock %}
