--- a/Prediccion/templates/signin.html
+++ b/Prediccion/templates/signin.html
@@ -1,26 +1,77 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Iniciar Sesión</title>
     <link href="{% static 'img/icon.png' %}" rel="icon">
     <link rel="stylesheet" href="{% static 'css/signupEstilos.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background: linear-gradient(to bottom right, #ce3d30, #ede9e0, #6f7bad);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative; /* Add position relative to contain the absolutely positioned image */
+        }
+        .card {
+            width: 100%;
+            max-width: 500px; /* Adjust width as needed */
+            margin-left: -130px; /* Move the card slightly to the left */
+            background-color: rgba(255, 255, 255, 0.2); /* Efecto de transparencia */
+
+        }
+        .rounded-pill {
+            border-radius: 50px !important;
+        }
+        .image-container {
+            position: absolute;
+            right: 90px; /* Move the image slightly to the left */
+            top: 250px;
+            transform: translateY(-50%);
+            width: 550px; /* Adjust width as needed */
+            height: 175px; /* Adjust height as needed */
+            background-size: cover;
+            background-position: center;
+        }
+        .additional-images {
+            position: absolute;
+            right: 200px;
+            top: 300px; /* Adjust this value as needed to position below the first image */
+            width: 300px; /* Adjust width as needed */
+            height: 112px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px; /* Space between images */
+        }
+        .additional-images .image {
+            width: 250px; /* Adjust width as needed */
+            height: 100px;
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
 </head>
-<body class="bg-secondary">
-    <div class="container py-5">
+<body>
+    <div class="image-container" style="background-image: url('{% static 'img/logogris_0.png' %}');"></div>
+    <div class="additional-images">
+        <div class="image" style="background-image: url('{% static 'img/nada.png' %}');"></div>
+        <div class="image" style="background-image: url('{% static 'img/image-removebg-preview.png' %}');"></div>
+    </div>
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-12 col-md-9">
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-0">
-                        <div class="row">
-                            <div class="col-lg-5 d-flex align-items-center justify-content-center">
-                                <div class="p-5">
-                                    <div class="text-center mb-4">
-                                        <h1 class="h4 text-gray-900">Login</h1>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-10 d-flex align-items-center justify-content-center">
+                                <div class="p-5 w-100 text-center">
+                                    <div class="mb-4">
+                                        <h1 class="h4 text-gray-900">Iniciar Sesión</h1>
                                     </div>
                                     {% if error %}
                                         <div class="alert alert-danger" role="alert">
@@ -30,35 +81,30 @@
                                     <form method="post" class="needs-validation" novalidate>
                                         {% csrf_token %}
                                         <div class="mb-4">
-                                            <label for="username" class="visually-hidden">Username</label>
-                                            <input type="text" class="form-control rounded-pill" id="username" name="username" placeholder="Username" required>
+                                            <label for="username" class="visually-hidden">Usuario</label>
+                                            <input type="text" class="form-control rounded-pill" id="username" name="username" placeholder="Usuario" required>
                                             <div class="invalid-feedback">
-                                                Please provide a valid username.
+                                                Por favor, proporciona un nombre de usuario válido.
                                             </div>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="password" class="visually-hidden">Password</label>
-                                            <input type="password" class="form-control rounded-pill" id="password" name="password" placeholder="Password" required>
+                                            <label for="password" class="visually-hidden">Contraseña</label>
+                                            <input type="password" class="form-control rounded-pill" id="password" name="password" placeholder="Contraseña" required>
                                             <div class="invalid-feedback">
-                                                Please provide a valid password.
+                                                Por favor, proporciona una contraseña válida.
                                             </div>
                                         </div>
                                         <div class="text-center">
                                             <button type="submit" class="btn btn-primary btn-lg btn-block rounded-pill">
-                                                Login
+                                                Iniciar Sesión
                                             </button>
                                         </div>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="{% url 'signup' %}">Don't have an account? Sign up!</a>
+                                        <a class="small" href="{% url 'signup' %}">¿No tienes una cuenta? ¡Regístrate!</a>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-7 d-none d-lg-block"
-                                 style="background-image: url('{% static 'img/modelos-matematicos-curso.png' %}');
-                                        background-size: cover;
-                                        background-position: center;">
                             </div>
                         </div>
                     </div>
