--- a/Prediccion/static/css/estilos_base.css
+++ b/Prediccion/static/css/estilos_base.css
@@ -143,3 +143,10 @@ a.sidebar-link:hover {
 .main .container-fluid {
     padding: 1rem;
 }
+
+.Logo {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
