--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -28,6 +28,8 @@
         <!-- Sidebar -->
         <aside id="sidebar" class="sidebar-toggle">
             <div class="sidebar-logo">
+                <!-- imagen logo -->
+                <img class="Logo" src="{% static 'img/image.png' %}" alt="Logo">
                 <a href="#">TrackGuard</a>
             </div>
             <!-- Sidebar Navigation -->
