--- a/Prediccion/templates/prediccion.html
+++ b/Prediccion/templates/prediccion.html
@@ -18,6 +18,13 @@
 {% endblock %}
 
 {% block content %}
+    <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Predicciones de Datos Históricos</li>
+        </ol>
+    </nav>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8">
