--- a/Prediccion/templates/index.html
+++ b/Prediccion/templates/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <style>
+
         .hero-content {
             background-color: rgba(0, 0, 0, 0.66);
             padding: 20px;
@@ -59,23 +60,87 @@
         }
 
         .card-bg-1::before {
-            background-image: url('{% static 'img/94.jpg' %}');
+            background-image: url('{% static 'img/est.png' %}');
         }
 
         .card-bg-2::before {
-            background-image: url('{% static 'img/image.png' %}');
+            background-image: url('{% static 'img/desc.jpeg' %}');
         }
 
         .card-bg-3::before {
-            background-image: url('{% static 'img/diagramaSerid.png' %}');
+            background-image: url('{% static 'img/sin.jpeg' %}');
         }
 
         .card-bg-4::before {
-            background-image: url('{% static 'img/vecteezyisometric-school-illustrationgr0522_generated.jpg' %}');
+            background-image: url('{% static 'img/compu.jpeg' %}');
         }
 
         .card:hover::before {
             filter: blur(5px);
+        }
+
+        .hero {
+            background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url('{% static 'img/HEADER1.jpg' %}');
+            background-size: cover;
+            background-position: center;
+        }
+
+        .footer {
+            background: linear-gradient(to bottom right, #1b3c6f, #000000), url('{% static 'img/footer-background.jpg' %}');
+            background-size: cover;
+            background-position: center;
+            padding: 20px 0;
+        }
+
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start; /* Asegúrate de que los elementos estén alineados al inicio */
+            flex-wrap: wrap;
+        }
+
+        .footer-image,
+        .footer-links,
+        .footer-social {
+            flex: 1 1 auto;
+            margin: 0 10px;
+        }
+
+        .footer-image {
+            flex: 1 1 200px;
+            margin-bottom: 15px;
+        }
+
+        .footer-links,
+        .footer-social {
+            flex: 1 1 300px;
+        }
+
+        .footer-links ul,
+        .footer-social ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .footer-links ul li,
+        .footer-social ul li {
+            margin-bottom: 10px;
+        }
+
+        .footer-links h5,
+        .footer-social h5 {
+            margin-bottom: 15px;
+        }
+
+        @media (max-width: 768px) {
+            .footer-content {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .footer-image {
+                margin-bottom: 30px;
+            }
         }
 
     </style>
@@ -108,7 +173,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero text-white text-center py-5" style="background-image: url('{% static 'img/HEADER1.jpg' %}'); background-size: cover;">
+    <section class="hero text-white text-center py-5">
         <div class="container left-align-container">
             <div class="hero-content text-start">
                 <h2 class="display-4">TrackGuard</h2>
@@ -171,9 +236,30 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class="footer bg-dark text-white text-center py-3">
         <div class="container">
-            <p>&copy; 2024 Aplicación para Predecir la Deserción Estudiantil.</p>
+            <div class="footer-content">
+                <div class="footer-image">
+                    <img src="{% static 'img/image-removebg-preview (1).png' %}" alt="" class="img-fluid">
+                    <p>Infórmate y aporta para prevenir la deserción estudiantil.</p>
+                </div>
+                <div class="footer-links">
+                    <h5>Contacto</h5>
+                    <ul>
+                        <li><a href="#" class="text-white">Secretaría Computación</a></li>
+                        <li><a href="#" class="text-white">UNL Página Oficial</a></li>
+                        <li><a href="#" class="text-white">Contacto TrackGuard</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <h5>Síguenos</h5>
+                    <ul>
+                        <li><a href="#" class="text-white">Facebook</a></li>
+                        <li><a href="#" class="text-white">Instagram</a></li>
+                    </ul>
+                </div>
+            </div>
+            <p>&copy; 2024 TrackGuard, Predicción de la Deserción Estudiantil.</p>
         </div>
     </footer>
 </body>
